--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="bg-dark">
+<div class="container-fluid">
   <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
+  <div class="min-height">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
