--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,5 +1,9 @@
-
-<div class="row justify-content-center align-items-center">
-   
-
+<div class="row justify-content-center align-items-center"> 
+    
+    @for (imagen of imagenes; track imagen) {
+        <div class="col-md-5 p-2" routerLink="{{imagen.ruta}}">
+            <img class="img-fluid" src="{{imagen.imagen}}" alt="Final Space">
+            </div>
+    }
+    
 </div>
