--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-dark">
-  <nav class="navbar bg-primary" data-bs-theme="dark"></nav>
-    <div class="container-fluid">
-      <a class="navbar-brand text-white" routerLink="/">SuperAPI</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/agentes" aria-current="page">Valorant Agents</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/armas" aria-current="page">Monster Hunter Weapons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/cartas" aria-current="page">Pokemon Cards</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="/personajes" aria-current="page">Final Space Characters</a>
-          </li>
-          
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">SuperAPI</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/agentes">Valorant Agents</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/armas">Monster Hunter Weapons</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/cartas">Pokemon Cards</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/personajes">Final Space Characters</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
