--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <app-navbar></app-navbar>
   <div class="min-height">
     <router-outlet></router-outlet>
