--- a/src/app/components/agentes/agentes.component.html
+++ b/src/app/components/agentes/agentes.component.html
@@ -5,7 +5,7 @@
 
         @for (agente of apiData.data; track $index) {
           <div class="col-xl-2 col-lg-4 col-md-6 col-sm-7 my-4">
-            <div class="card border-light card text-bg-secondary mb-3">
+            <div class="card">
                 <img [src]="agente.displayIcon" class="card-img-top" [alt]="agente.displayName">
                 <div class="card-body">
                   <h5 class="card-title text-center">{{agente.displayName}}</h5>                  
