--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center align-items-center"> 
+<div class="row justify-content-center align-items-center my-5"> 
     
     @for (imagen of imagenes; track imagen) {
         <div class="col-md-5 p-2" routerLink="{{imagen.ruta}}">
