estilo agentes, estilo cartas y correccion de inicio OTRA VEZ

--- a/src/app/components/agentes/agentes.component.html
+++ b/src/app/components/agentes/agentes.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <img [src]="agente.displayIcon" class="card-img-top" [alt]="agente.displayName">
                 <div class="card-body">
-                  <h5 class="card-title text-center">{{agente.displayName}}</h5>                  
+                  <h5 class="card-title text-center"><strong>{{agente.displayName}}</strong></h5>                  
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><strong>Developer name: </strong> {{agente.developerName}} </li>
