--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <img [src]="carta.images.small" class="card-img-top" [alt]="carta.name">
                 <div class="card-body">
-                  <h5 class="card-title text-center">{{carta.name}}</h5>                  
+                  <h5 class="card-title text-center"> <strong>{{carta.name}}</strong></h5>                  
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><strong>Artist: </strong> {{carta.artist}} </li>
