--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,9 +1,11 @@
+<div class="container">
 <div class="row justify-content-center align-items-center my-5"> 
     
     @for (imagen of imagenes; track imagen) {
-        <div class="col-md-5 p-2" routerLink="{{imagen.ruta}}">
+        <div class="col-md-5 p-3" routerLink="{{imagen.ruta}}">
             <img class="img-fluid" src="{{imagen.imagen}}" alt="Final Space">
             </div>
     }
     
+</div>
 </div>
