retoques esteticos components y pagina de error

--- a/src/app/components/armas/armas.component.html
+++ b/src/app/components/armas/armas.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <img [src]="arma.assets?.image" class="card-img-top" [alt]="arma.name">
                 <div class="card-body">
-                  <h5 class="card-title text-center">{{arma.name}}</h5>                  
+                  <h5 class="card-title text-center"><strong>{{arma.name}}</strong></h5>                  
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><strong>Weapon type: </strong> {{arma.type}} </li>
