--- a/src/app/components/error-page/error-page.component.html
+++ b/src/app/components/error-page/error-page.component.html
@@ -1,1 +1,8 @@
-<p>error-page works!</p>
+<div class="container text-center mt-5">
+    <div class="errorcat">
+        <img src="/images/error404.png" alt="errorcat" class="img-fluid" />
+    </div>
+    <p>Lo sentimos, la página que estás buscando no se encuentra disponible.</p>
+    <a routerLink="/inicio" class="btn custom-button">Volver a la página de Inicio</a>
+</div>
+
