--- a/src/app/components/personajes/personajes.component.html
+++ b/src/app/components/personajes/personajes.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <img [src]="personaje.img_url" class="card-img-top" [alt]="personaje.name">
                 <div class="card-body">
-                  <h5 class="card-title text-center">{{personaje.name}}</h5>                  
+                  <h5 class="card-title text-center"><strong>{{personaje.name}}</strong></h5>                  
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><strong>Gender: </strong> {{personaje.gender}} </li>
