--- a/src/app/components/armas/armas.component.html
+++ b/src/app/components/armas/armas.component.html
@@ -1,9 +1,9 @@
-@defer (when apiData) {
+<!-- @defer (when armas) {
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
         <h1 class="text-center">Weapons</h1>
 
-        @for (arma of apiData; track arma.id) {
+        @for (arma of armas; track arma.id) {
             <div class="col-xl-2 col-lg-4 col-md-6 col-sm-7 my-4">
             <div class="card">
                 <img [src]="arma.assets?.image" class="card-img-top" [alt]="arma.name">
@@ -15,9 +15,48 @@
                   <li class="list-group-item"><strong>Rarity: </strong>{{arma.rarity}} </li>
                 </ul>
               </div>
-            </div>
-          
+            </div>          
         }
       </div>
-    </div>
+    </div> 
+  } -->
+
+@defer (when armas.length > 0) {
+  <div class="row">
+    
+    @for (arma of armas; track arma.id) {
+      <div class="col-md-3 my-2">
+        <div class="card">
+          <div class="card-header bg-secondary">
+            <div class="card-title">
+              <h3>{{arma.name}}</h3>
+            </div>
+            <div class="card-subtitle text-secondary">
+              {{arma.type}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="{{arma.assets?.image}}" alt="" class="card-img-top">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h4 class="text-primary">Attack</h4>
+                <p class="text-danger">{{arma.attack.raw}}</p>
+                <h4 class="text-primary">Damage Type</h4>
+                <p class="text-danger">{{arma.damageType}}</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            Rarity: <span class= "badge" [ngClass]="{'bg-success': arma.rarity===1 || arma.rarity===2,
+            'bg-danger': arma.rarity===3 || arma.rarity===4,
+            'bg-info': arma.rarity===5 || arma.rarity===6,
+            'bg-warning': arma.rarity===7 || arma.rarity===8}">
+            {{arma.rarity}}</span> 
+          </div>
+        </div>
+      </div>
+    }
+  </div>
 }
