--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -1,9 +1,9 @@
-@defer (when apiData) {
+<!-- @defer (when coleccionCartas) {
   <div class="container-fluid p-5">
     <div class="row justify-content-center">
         <h1 class="text-center">Pokemon Cards</h1>
 
-        @for (carta of apiData.data; track $index) {
+        @for (carta of coleccionCartas; track $index) {
           <div class="col-xl-2 col-lg-4 col-md-6 col-sm-7 my-4">
             <div class="card">
                 <img [src]="carta.images.small" class="card-img-top" [alt]="carta.name">
@@ -21,4 +21,27 @@
 
     </div>
   </div>
+} -->
+
+@defer (when coleccionCartas.length > 0) {
+  <div class="row my-2">
+    @for (poke of coleccionCartas; track $index) {
+      <div class="col-md-2 my-2">
+        <div class="card">
+          <img src="{{poke.images.large}}" alt="" class="card-img-top">
+        </div>
+      </div>
+    } 
+  </div>
+
+
+} @placeholder (minimum 500ms) {
+  <div class="col-12 my-2">
+    <h3 class="text-primary text-center border whadow-sm p-2 rounded-1">
+      <div class="spinner-border text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </h3>
+  </div>
+
 }
