--- a/src/app/components/cartas/cartas.component.html
+++ b/src/app/components/cartas/cartas.component.html
@@ -25,10 +25,10 @@
 
 @defer (when coleccionCartas.length > 0) {
   <div class="row my-2">
-    @for (poke of coleccionCartas; track $index) {
+    @for (card of coleccionCartas; track $index) {
       <div class="col-md-2 my-2">
-        <div class="card">
-          <img src="{{poke.images.large}}" alt="" class="card-img-top">
+        <div class="card" [routerLink]="'/pokemon-detail/' + card.id">
+          <img src="{{card.images.large}}" alt="" class="card-img-top">
         </div>
       </div>
     } 
