finalizacion paginas de detalle, faltan los estilos

--- a/src/app/components/monsterhunter-detail/monsterhunter-detail.component.html
+++ b/src/app/components/monsterhunter-detail/monsterhunter-detail.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-md-4 text-center">
-                <img class="img-fluid p-3 rounded-circle" src="{{arma.assets?.image}}" alt="{{arma.name}}">
+                <img class="img-fluid p-3" src="{{arma.assets?.image}}" alt="{{arma.name}}">
             </div>
             <div class="col-md-4">
                 <div class="card-body">
